<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_label_serverIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:text="@string/connectionPage_serverIP"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_serverIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="number"
            android:digits="0123456789." />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connectionPage_password"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/text_show_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:text="..."
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/connectionPage_connect"
                android:text="@string/connectionPage_connect"
                android:drawableLeft="@drawable/connect"
                style="@style/connection_button_style" />

            <Button
                android:id="@+id/connectionPage_sendPassword"
                android:text="@string/connectionPage_sendPassword"
                android:drawableLeft="@drawable/login"
                style="@style/connection_button_style" />

            <Button
                android:id="@+id/connectionPage_disconnect"
                android:text="@string/connectionPage_disconnect"
                android:drawableLeft="@drawable/disconnect"
                style="@style/connection_button_style" />

            <Button
                android:id="@+id/connectionPage_reload"
                android:drawableLeft="@drawable/reload"
                android:text="@string/connectionPage_reload"
                style="@style/connection_button_style"  />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>